--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 <body>
     <h1>Taller GIT</h1>
 
+    <div class="equipo">
+    <h2>Equipo</h2>
+    <ul>
+        <li>
+            <p>Jonathan Caliva</p>
+        </li>
+        <li>
+            <p>Facundo Orsi</p>
+        </li>
+        <li>
+            <p>Manuel Imfeld</p>
+        </li>
+    </ul>
+</div>
     <script src="./script.js"></script>
 </body>
 </html>
