--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 
     <div class="equipo">
     <h2>Equipo</h2>
-    <ul>
-        <li>
-            <p>Jonathan Caliva</p>
-        </li>
-        <li>
-            <p>Facundo Orsi</p>
-        </li>
-        <li>
-            <p>Manuel Imfeld</p>
-        </li>
-    </ul>
+    <div>
+        <ul>
+            <li>
+                <p class="integrante">Jonathan Caliva</p>
+            </li>
+            <li>
+                <p class="integrante">Facundo Orsi</p>
+            </li>
+            <li>
+                <p class="integrante">Manuel Imfeld</p>
+            </li>
+        </ul>
+    </div>
 </div>
     <script src="./script.js"></script>
 </body>
