Listado de ejercicios

--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <h1>Taller GIT</h1>
 
+    <h3>Ejercicos</h3>
+
+    <ol>
+      <li>Crear un repositorio remoto:</li>
+      <li>Invitar a los colaboradores</li>
+      <li>
+        Clonar un repositorio remotoCrear un repositorio local y trabajar sobre
+        él
+      </li>
+      <li>Trabajar en archivos diferentes</li>
+      <li>Trabajar en el mismo archivo</li>
+      <li>Resolver un conflicto</li>
+    </ol>
+
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
